--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         <p><span class="prompt">root@phathackz:~$</span> <span class="command"><b>cat projects.txt</b></span></p>
             <div><b>Current projects:  </b>   
             <div><a href="Digital_integritet.pdf">> Digital Integritet [PDF]</a></div>
-            <div><a href="https://discord.gg">> Discord Community</a></div>
+            <div><a href="https://discord.gg/HQGxDRUV9K">> Discord Community</a></div>
             <br>            
             <div><b>In development:</b>
             <div>> Project: FOSS Identity Manager</a></div>
             <br>
             <div><b>Past projects:</b>
-            <div><a href="https://www.meetup.com">> HackTheBox Stockholm Meetup</a></div>
+            <div> HackTheBox Stockholm Meetup</a></div>
         <p><span class="prompt">root@phathackz:~$</span> <span class="command"><b>ping phatmir</b></span></p>
            PING reply:
            <div>LinkedIn: Fatmir Neziraj</div>
