--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <p><span class="prompt">root@phathackz:~$</span> <span class="command"><b>cat projects.txt</b></span></p>
             <div><b>Current projects:  </b>   
-            <div><a href="Digital_integritet.pdf">> Digital Integritet [PDF]</a></div>
+            <div><a href="Digital integritet v1.1.pdf">> Digital Integritet [PDF]</a></div>
             <div><a href="https://discord.gg/HQGxDRUV9K">> Discord Community</a></div>
             <br>            
             <div><b>In development:</b>
