--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <div><b>Current projects:  </b>   
             <div><a href="Digital integritet v1.1.pdf">> Digital Integritet [PDF]</a></div>
             <div><a href="https://discord.gg/HQGxDRUV9K">> Discord Community</a></div>
+            <div><a href="https://twitch.tv/phatmir">> Rarely streaming on Twitch</div>
             <br>            
             <div><b>In development:</b>
             <div>> Project: FOSS Identity Manager</a></div>
