--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
             <div><b>Current projects:  </b>   
             <div><a href="Digital integritet v1.1.pdf">> Digital Integritet [PDF]</a></div>
             <div><a href="https://discord.gg/HQGxDRUV9K">> Discord Community</a></div>
-            <div><a href="https://twitch.tv/phatmir">> Rarely streaming on Twitch</div>
+            <div><a href="https://twitch.tv/phatmir">> Twitch</div>
             <br>            
             <div><b>In development:</b>
             <div>> Project: FOSS Identity Manager</a></div>
             <br>
-            <div><b>Past projects:</b>
+            <div><b>Past projects & involvements:</b>
             <div> HackTheBox Stockholm Meetup</a></div>
         <p><span class="prompt">root@phathackz:~$</span> <span class="command"><b>ping phatmir</b></span></p>
            PING reply:
