--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div><a href="https://twitch.tv/phatmir">> Twitch</div>
             <br>            
             <div><b>In development:</b>
-            <div>> Project: FOSS Identity Manager</a></div>
+            <div>> Project: FOSS Identity Manager</div>
             <br>
             <div><b>Past projects & involvements:</b>
             <div> HackTheBox Stockholm Meetup</a></div>
