--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             <div><b>Current projects:  </b>   
             <div><a href="Digital integritet v1.1.pdf">> Digital Integritet [PDF]</a></div>
             <div><a href="https://discord.gg/HQGxDRUV9K">> Discord Community</a></div>
-            <div><a href="https://twitch.tv/phatmir">> Twitch</a></div>
             <br>            
             <div><b>In development:</b>
             <div>> Project: FOSS Identity Manager</div>
+            <div>> More to be announced </div>
             <br>
             <div><b>Past projects & involvements:</b>
             <div> HackTheBox Stockholm Meetup</div>
