--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div>> More to be announced </div>
             <br>
             <div><b>Past projects & involvements:</b>
-            <div> HackTheBox Stockholm Meetup</div>
+            <div> HackTheBox Stockholm</div>
         <p><span class="prompt">root@phathackz:~$</span> <span class="command"><b>ping phatmir</b></span></p>
            PING reply:
            <div>LinkedIn: Fatmir Neziraj</div>
