--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <p><span class="prompt">root@phathackz:~$</span> <span class="command"><b>cat projects.txt</b></span></p>
             <div><b>Current projects:  </b>   
             <div><a href="Digital integritet v1.1.pdf">> Digital Integritet [PDF]</a></div>
+            <div><a href="Phathackz Rapport Maj 2025.pdf">> Cyber Threat Intelligence Rapport Maj 2025 [PDF]</a></div>
             <div><a href="https://discord.gg/HQGxDRUV9K">> Discord Community</a></div>
             <div><a href="https://github.com/fvtmir">> GitHub</a></div>
             <br>            
